objects/References__c.object
<CustomObject>
    <fields>
        <fullName>Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Company Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Office_Phone__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Office Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Transporter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transporter</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>References</relationshipLabel>
        <relationshipName>References</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Reference</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>References Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>References</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>